@@ -6,9 +6,9 @@ configure
 install-sh
 mkinstalldirs
 missing
-config.log
 *.cache
 config.*
 depcomp
 libtool
 INSTALL
+fuse.pc
