@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = @subdirs@
+SUBDIRS = @subdirs@ @subdirs2@
 
 EXTRA_DIST =			\
 	fuse.spec		\
@@ -8,3 +8,8 @@ EXTRA_DIST =			\
 	Filesystems		\
 	BUGS			\
 	doc/how-fuse-works
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = fuse.pc
+
+$(pkgconfig_DATA): config.status
