@@ -7,4 +7,4 @@ Name: fuse
 Description: Filesystem in Userspace
 Version: @VERSION@
 Libs: -L${libdir} -lfuse
-Cflags: -I${includedir}/fuse
+Cflags: -I${includedir}
