@@ -1,3 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
 noinst_HEADERS = fuse.h
+
+all-local: fuse.h
+
+fuse.h:
+	ln -s ../../kernel/linux/fuse.h .
